# zero2prod

./: Cargo.toml  Dockerfile
.github/: general.yml
src/: configuration.rs  domain.rs  lib.rs  main.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
